@@ -7,14 +7,14 @@ import com.umcstudy.jace.domain.mission.entity.mapping.MissionUser;
 import com.umcstudy.jace.domain.mission.enums.MissionStatus;
 import com.umcstudy.jace.domain.mission.repository.MissionRepository;
 import com.umcstudy.jace.domain.mission.repository.MissionUserRepository;
+import com.umcstudy.jace.global.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +25,7 @@ public class MissionService {
 
     @Transactional(readOnly = true)
     public MissionResDTO.GetHome getHome(String region, Long cursorId, int size) {
-        Long userId = Long.parseLong(SecurityContextHolder.getContext().getAuthentication().getName());
+        Long userId = SecurityUtils.getCurrentUserId();
 
         long clearMissionCnt = missionUserRepository.countByUser_IdAndMissionCondition(userId, MissionStatus.SUCCESS);
 
@@ -37,27 +37,19 @@ public class MissionService {
 
         List<MissionResDTO.MissionItem> missionList = missions.stream()
                 .map(MissionConverter::toMissionItem)
-                .collect(Collectors.toList());
+                .toList();
 
         return MissionConverter.toGetHome(clearMissionCnt, missionList, hasNext);
     }
 
     @Transactional(readOnly = true)
-    public MissionResDTO.GetMyMission getMyMission(MissionStatus missionCondition, Long cursorId, int size) {
-        Long userId = Long.parseLong(SecurityContextHolder.getContext().getAuthentication().getName());
+    public MissionResDTO.GetMyMission getMyMission(MissionStatus missionCondition, int page, int size) {
+        Long userId = SecurityUtils.getCurrentUserId();
 
-        List<MissionUser> missionUsers = missionUserRepository.findByUserIdAndConditionWithCursor(
-                userId, missionCondition, cursorId, PageRequest.of(0, size + 1));
-        boolean hasNext = missionUsers.size() > size;
-        if (hasNext) {
-            missionUsers = missionUsers.subList(0, size);
-        }
+        Page<MissionUser> missionUsers = missionUserRepository.findByUserIdAndCondition(
+                userId, missionCondition, PageRequest.of(page, size));
 
-        List<MissionResDTO.MyMissionItem> missionList = missionUsers.stream()
-                .map(MissionConverter::toMyMissionItem)
-                .collect(Collectors.toList());
-
-        return MissionConverter.toGetMyMission(missionList, hasNext);
+        return MissionConverter.toGetMyMission(missionUsers);
     }
 
     public MissionResDTO.PatchMissionSuc patchMissionSuc(Integer missionId) {
