@@ -6,20 +6,20 @@ import com.umcstudy.jace.domain.review.converter.ReviewConverter;
 import com.umcstudy.jace.domain.review.dto.ReviewReqDTO;
 import com.umcstudy.jace.domain.review.dto.ReviewResDTO;
 import com.umcstudy.jace.domain.review.entity.Review;
+import com.umcstudy.jace.domain.review.enums.ReviewSortType;
 import com.umcstudy.jace.domain.review.exception.ReviewException;
 import com.umcstudy.jace.domain.review.exception.code.ReviewErrorCode;
 import com.umcstudy.jace.domain.review.repository.ReviewImageRepository;
 import com.umcstudy.jace.domain.review.repository.ReviewRepository;
 import com.umcstudy.jace.domain.user.entity.User;
 import com.umcstudy.jace.domain.user.repository.UserRepository;
+import com.umcstudy.jace.global.security.SecurityUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -32,7 +32,7 @@ public class ReviewService {
 
     @Transactional
     public ReviewResDTO.PostReviewWrite postReviewWrite(ReviewReqDTO.PostReviewWrite dto, Long shopId) {
-        Long userId = Long.parseLong(SecurityContextHolder.getContext().getAuthentication().getName());
+        Long userId = SecurityUtils.getCurrentUserId();
 
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ReviewException(ReviewErrorCode.USER_NOT_FOUND));
@@ -42,13 +42,35 @@ public class ReviewService {
 
         Review review = reviewRepository.save(ReviewConverter.toReview(shop, user, dto));
 
-        if (dto.reviewImageUrl() != null) {
-            dto.reviewImageUrl().forEach(url ->
-                    reviewImageRepository.save(ReviewConverter.toReviewImage(review, url))
+        if (dto.reviewImageUrl() != null && !dto.reviewImageUrl().isEmpty()) {
+            reviewImageRepository.saveAll(
+                    dto.reviewImageUrl().stream()
+                            .map(url -> ReviewConverter.toReviewImage(review, url))
+                            .toList()
             );
         }
 
         return ReviewConverter.toPostReviewWrite(review);
+    }
+
+    @Transactional(readOnly = true)
+    public ReviewResDTO.GetMyReviews getMyReviews(ReviewSortType sortBy, Long cursorId, int size) {
+        Long userId = SecurityUtils.getCurrentUserId();
+
+        List<Review> reviews = sortBy == ReviewSortType.SCORE
+                ? reviewRepository.findByUserIdOrderByScoreWithCursor(userId, cursorId, PageRequest.of(0, size + 1))
+                : reviewRepository.findByUserIdOrderByIdWithCursor(userId, cursorId, PageRequest.of(0, size + 1));
+
+        boolean hasNext = reviews.size() > size;
+        if (hasNext) {
+            reviews = reviews.subList(0, size);
+        }
+
+        List<ReviewResDTO.ReviewItem> reviewList = reviews.stream()
+                .map(ReviewConverter::toReviewItem)
+                .toList();
+
+        return ReviewConverter.toGetMyReviews(reviewList, hasNext);
     }
 
     @Transactional(readOnly = true)
@@ -61,7 +83,7 @@ public class ReviewService {
 
         List<ReviewResDTO.ReviewItem> reviewList = reviews.stream()
                 .map(ReviewConverter::toReviewItem)
-                .collect(Collectors.toList());
+                .toList();
 
         return ReviewConverter.toGetReviews(reviewList, hasNext);
     }
